--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build
       run: docker build .
-      working-dir: 1.9
+      working-directory: 1.9
 
   build-1.10:
 
@@ -39,7 +39,7 @@ jobs:
 
     - name: Build
       run: docker build .
-      working-dir: 1.10
+      working-directory: 1.10
 
   build-2.0:
 
@@ -54,4 +54,4 @@ jobs:
 
     - name: Build
       run: docker build 2.0
-      working-dir: 2.0
+      working-directory: 2.0
