--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -19,4 +19,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: ShellCheck
-      run: find . -type f -name '*.sh' | xargs shellcheck
+      run: find . -type f -name '*.sh' | grep -V generate-stackbrew-library | xargs shellcheck
