--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  build-1.9:
+  build-1_9:
 
     name: Build 1.9
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
       run: docker build .
       working-directory: 1.9
 
-  build-1.10:
+  build-1_10:
 
     name: Build 1.10
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
       run: docker build .
       working-directory: 1.10
 
-  build-2.0:
+  build-2_0:
 
     name: Build 2.0
     runs-on: ubuntu-latest
