--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -53,5 +53,5 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: docker build 2.0
+      run: docker build .
       working-directory: '2.0'
