--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -21,8 +21,23 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: docker build .
+      run: |
+        docker build \
+        --pull \
+        --no-cache \
+        --tag composer/composer:1 \
+        --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+') \
+        .
       working-directory: '1.10'
+
+    - name: Registry login
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Push tag(s)
+      run: docker push composer/composer
 
   build-2_0:
 
@@ -36,5 +51,21 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: docker build .
+      run: |
+        docker build \
+        --pull \
+        --no-cache \
+        --tag composer/composer:latest \
+        --tag composer/composer:2 \
+        --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+') \
+        .
       working-directory: '2.0'
+
+    - name: Registry login
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Push tag(s)
+      run: docker push composer/composer
