--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,8 +2,6 @@ name: Docker
 
 on:
   push:
-    branches:
-    - master
     paths:
     - .github/workflows/docker.yaml
     - '**/Dockerfile'
@@ -33,12 +31,14 @@ jobs:
       working-directory: '1.10'
 
     - name: Registry login
+      if: github.ref == 'ref/head/master'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Push tag(s)
+      if: github.ref == 'ref/head/master'
       run: docker push composer/composer
 
   build-2_0:
@@ -64,10 +64,12 @@ jobs:
       working-directory: '2.0'
 
     - name: Registry login
+      if: github.ref == 'ref/head/master'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Push tag(s)
+      if: github.ref == 'ref/head/master'
       run: docker push composer/composer
