--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -31,14 +31,14 @@ jobs:
       working-directory: '1.10'
 
     - name: Registry login
-      if: github.ref == 'ref/head/master'
+      if: contains(github.ref, 'origin/master')
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Push tag(s)
-      if: github.ref == 'ref/head/master'
+      if: contains(github.ref, 'origin/master')
       run: docker push composer/composer
 
   build-2_0:
