--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -39,7 +39,10 @@ jobs:
 
     - name: Push tag(s)
       if: github.ref == 'refs/heads/master'
-      run: docker push composer/composer
+      run: |
+        docker push composer/composer:1
+        docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
+      working-directory: '1.10'
 
   build-2_0:
 
@@ -72,4 +75,8 @@ jobs:
 
     - name: Push tag(s)
       if: github.ref == 'refs/heads/master'
-      run: docker push composer/composer
+      run: |
+        docker push composer/composer:latest
+        docker push composer/composer:2
+        docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+')
+      working-directory: '2.0'
