--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Build
+    - name: Build containers
       run: |
         docker build \
         --pull \
@@ -30,19 +30,40 @@ jobs:
         .
       working-directory: '1.10'
 
-    - name: Registry login
+    - name: Login to Docker Hub
       if: github.ref == 'refs/heads/master'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Push tag(s)
+    - name: Push tag(s) to Docker Hub
       if: github.ref == 'refs/heads/master'
       run: |
         docker push composer/composer:1
         docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
       working-directory: '1.10'
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ECR_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_ECR_SECRET_KEY }}
+        aws-region: eu-west-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Push tag(s) to Amazon ECR
+      if: github.ref == 'refs/heads/master'
+      run: |
+        docker tag composer/composer:1 public.ecr.aws/u0u1j5s3/composer:1
+        docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+') public.ecr.aws/u0u1j5s3/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
+        docker push public.ecr.aws/u0u1j5s3/composer:1
+        docker push public.ecr.aws/u0u1j5s3/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
+      working-directory: '1.10'
+
 
   build-2_1:
 
