--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -45,6 +45,7 @@ jobs:
       working-directory: '1.10'
 
     - name: Configure AWS credentials
+      if: github.ref == 'refs/heads/master'
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ECR_ACCESS_KEY }}
@@ -52,18 +53,21 @@ jobs:
         aws-region: eu-west-1
 
     - name: Login to Amazon ECR
+      if: github.ref == 'refs/heads/master'
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Push tag(s) to Amazon ECR
       if: github.ref == 'refs/heads/master'
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: composer
       run: |
-        docker tag composer/composer:1 public.ecr.aws/u0u1j5s3/composer:1
-        docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+') public.ecr.aws/u0u1j5s3/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
-        docker push public.ecr.aws/u0u1j5s3/composer:1
-        docker push public.ecr.aws/u0u1j5s3/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
+        docker tag composer/composer:1 $ECR_REGISTRY/$ECR_REPOSITORY:1
+        docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+') $ECR_REGISTRY/$ECR_REPOSITORY:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:1
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
       working-directory: '1.10'
-
 
   build-2_1:
 
