--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,19 +7,20 @@ on:
     - '**/Dockerfile'
     - '**/docker-entrypoint.sh'
 
+env:
+  AWS_REGION: us-east-1
+  ECR_REPO: public.ecr.aws/u0u1j5s3/composer
+
 jobs:
-
   build-1_10:
-
     name: Build 1.10
     runs-on: ubuntu-latest
     timeout-minutes: 20
-
+    defaults:
+      run:
+        working-directory: '1.10'
     steps:
-
-    - name: Checkout
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v2
     - name: Build containers
       run: |
         docker build \
@@ -28,54 +29,42 @@ jobs:
         --tag composer/composer:1 \
         --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+') \
         .
-      working-directory: '1.10'
-
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/master'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
     - name: Push tag(s) to Docker Hub
       if: github.ref == 'refs/heads/master'
       run: |
         docker push composer/composer:1
         docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
-      working-directory: '1.10'
-
-    - name: Login to Public ECR
+    - name: Login to Amazon Public ECR
       if: github.ref == 'refs/heads/master'
       uses: docker/login-action@v1
       with:
         registry: public.ecr.aws
         username: ${{ secrets.AWS_ECR_ACCESS_KEY }}
         password: ${{ secrets.AWS_ECR_SECRET_KEY }}
-      env:
-        AWS_REGION: us-east-1
-
-    - name: Push tag(s) to Amazon ECR
+    - name: Push tag(s) to Amazon Public ECR
       if: github.ref == 'refs/heads/master'
-      env:
-        ECR_REPO: public.ecr.aws/u0u1j5s3/composer
       run: |
         docker tag composer/composer:1 $ECR_REPO:1
         docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+') $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
         docker push $ECR_REPO:1
         docker push $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
-      working-directory: '1.10'
 
   build-2_1:
 
     name: Build 2.1
     runs-on: ubuntu-latest
     timeout-minutes: 20
-
+    defaults:
+      run:
+        working-directory: '2.1'
     steps:
-
-    - name: Checkout
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v2
     - name: Build
       run: |
         docker build \
@@ -85,19 +74,31 @@ jobs:
         --tag composer/composer:2 \
         --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+') \
         .
-      working-directory: '2.1'
-
-    - name: Registry login
+    - name: Login to Docker Hub
       if: github.ref == 'refs/heads/master'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-    - name: Push tag(s)
+    - name: Push tag(s) to Docker Hub
       if: github.ref == 'refs/heads/master'
       run: |
         docker push composer/composer:latest
         docker push composer/composer:2
         docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+')
-      working-directory: '2.1'
+    - name: Login to Amazon Public ECR
+      if: github.ref == 'refs/heads/master'
+      uses: docker/login-action@v1
+      with:
+        registry: public.ecr.aws
+        username: ${{ secrets.AWS_ECR_ACCESS_KEY }}
+        password: ${{ secrets.AWS_ECR_SECRET_KEY }}
+    - name: Push tag(s) to Amazon Public ECR
+      if: github.ref == 'refs/heads/master'
+      run: |
+        docker tag composer/composer:latest $ECR_REPO:latest
+        docker tag composer/composer:2 $ECR_REPO:2
+        docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+') $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+')
+        docker push $ECR_REPO:latest
+        docker push $ECR_REPO:2
+        docker push $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+')
