--- a/1.10/Dockerfile
+++ b/1.10/Dockerfile
@@ -1,7 +1,6 @@
 FROM php:8-alpine
 
-RUN set -eux; \
-  apk upgrade --no-cache; \
+RUN set -eux ; \
   apk add --no-cache --virtual .composer-rundeps \
     p7zip \
     bash \
@@ -16,22 +15,6 @@ RUN set -eux; \
     unzip \
     zip
 
-RUN set -eux; \
-  curl \
-    --silent \
-    --fail \
-    --location \
-    --retry 3 \
-    --output /usr/local/bin/install-php-extensions \
-    --url https://raw.githubusercontent.com/mlocati/docker-php-extension-installer/edf2c4d40de3b86cc1a6e1877eaede05be016389/install-php-extensions; \
-  echo 2c3e48c01d5346be2c6cdd8d6f0a754f107d1119960b3f9d7cad0cae3ac663fb3646eab890310f89aeb3066460fee712034c0f5537608996f9a9f5f413992528 /usr/local/bin/install-php-extensions | sha512sum --strict --check; \
-  chmod +x /usr/local/bin/install-php-extensions
-
-RUN set -eux; \
-  install-php-extensions \
-    bz2 \
-    zip
-
 RUN printf "# composer php cli ini settings\n\
 date.timezone=UTC\n\
 memory_limit=-1\n\
@@ -41,7 +24,24 @@ ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV COMPOSER_HOME /tmp
 ENV COMPOSER_VERSION 1.10.22
 
-RUN set -eux; \
+RUN set -eux ; \
+  # install https://github.com/mlocati/docker-php-extension-installer
+  curl \
+    --silent \
+    --fail \
+    --location \
+    --retry 3 \
+    --output /usr/local/bin/install-php-extensions \
+    --url https://github.com/mlocati/docker-php-extension-installer/releases/download/1.2.58/install-php-extensions \
+  ; \
+  echo 182011b3dca5544a70fdeb587af44ed1760aa9a2ed37d787d0f280a99f92b008e638c37762360cd85583830a097665547849cb2293c4a0ee32c2a36ef7a349e2 /usr/local/bin/install-php-extensions | sha512sum --strict --check ; \
+  chmod +x /usr/local/bin/install-php-extensions ; \
+  # install necessary/useful extensions not included in base image
+  install-php-extensions \
+    bz2 \
+    zip \
+  ; \
+  # install public keys for snapshot and tag validation, see https://composer.github.io/pubkeys.html
   curl \
     --silent \
     --fail \
@@ -50,14 +50,7 @@ RUN set -eux; \
     --output /tmp/keys.dev.pub \
     --url https://raw.githubusercontent.com/composer/composer.github.io/e7f28b7200249f8e5bc912b42837d4598c74153a/snapshots.pub \
   ; \
-  php -r " \
-    \$signature = '4ac45767e5ec22652f0c1167cbbb8a2b0c708369153e328cad90147dafe50952'; \
-    \$hash = hash('sha256', preg_replace('{\s}', '', file_get_contents('/tmp/keys.dev.pub'))); \
-    if (!hash_equals(\$signature, \$hash)) { \
-      echo 'Integrity check failed, dev public key is either corrupt or worse.' . PHP_EOL; \
-      exit(1); \
-    }" \
-  ; \
+  echo 572b963c4b7512a7de3c71a788772440b1996d918b1d2b5354bf8ba2bb057fadec6f7ac4852f2f8a8c01ab94c18141ce0422aec3619354b057216e0597db5ac2 /tmp/keys.dev.pub | sha512sum --strict --check ; \
   curl \
     --silent \
     --fail \
@@ -66,14 +59,8 @@ RUN set -eux; \
     --output /tmp/keys.tags.pub \
     --url https://raw.githubusercontent.com/composer/composer.github.io/e7f28b7200249f8e5bc912b42837d4598c74153a/releases.pub \
   ; \
-  php -r " \
-    \$signature = '57815ba27e54dc317ecc7cc5573090d087719ba68f3bb7234e5d42d084a14642'; \
-    \$hash = hash('sha256', preg_replace('{\s}', '', file_get_contents('/tmp/keys.tags.pub'))); \
-    if (!hash_equals(\$signature, \$hash)) { \
-      echo 'Integrity check failed, tags public key is either corrupt or worse.' . PHP_EOL; \
-      exit(1); \
-    }" \
-  ; \
+  echo 47f374b8840dcb0aa7b2327f13d24ab5f6ae9e58aa630af0d62b3d0ea114f4a315c5d97b21dcad3c7ffe2f0a95db2edec267adaba3f4f5a262abebe39aed3a28 /tmp/keys.tags.pub | sha512sum --strict --check ; \
+  # download installer.php, see https://getcomposer.org/download/
   curl \
     --silent \
     --fail \
@@ -82,18 +69,17 @@ RUN set -eux; \
     --output /tmp/installer.php \
     --url https://raw.githubusercontent.com/composer/getcomposer.org/f24b8f860b95b52167f91bbd3e3a7bcafe043038/web/installer \
   ; \
-  php -r " \
-    \$signature = '756890a4488ce9024fc62c56153228907f1545c228516cbf63f885e036d37e9a59d27d63f46af1d4d07ee0f76181c7d3'; \
-    \$hash = hash('sha384', file_get_contents('/tmp/installer.php')); \
-    if (!hash_equals(\$signature, \$hash)) { \
-      echo 'Integrity check failed, installer is either corrupt or worse.' . PHP_EOL; \
-      exit(1); \
-    }" \
+  echo 3137ad86bd990524ba1dedc2038309dfa6b63790d3ca52c28afea65dcc2eaead16fb33e9a72fd2a7a8240afaf26e065939a2d472f3b0eeaa575d1e8648f9bf19 /tmp/installer.php | sha512sum --strict --check ; \
+  # install composer phar binary
+  php /tmp/installer.php \
+    --no-ansi \
+    --install-dir=/usr/bin \
+    --filename=composer \
+    --version=${COMPOSER_VERSION} \
   ; \
-  php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION}; \
-  composer --ansi --version --no-interaction; \
-  composer diagnose; \
-  rm -f /tmp/installer.php; \
+  composer --ansi --version --no-interaction ; \
+  composer diagnose ; \
+  rm -f /tmp/installer.php ; \
   find /tmp -type d -exec chmod -v 1777 {} +
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
