--- a/.github/workflows/v1.yaml
+++ b/.github/workflows/v1.yaml
@@ -26,7 +26,7 @@ jobs:
         --pull \
         --no-cache \
         --tag composer/composer:1 \
-        --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.10.[\d]+' Dockerfile | grep -oE '1.10.[\d]+') \
+        --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+') \
         .
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/main'
@@ -38,7 +38,7 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         docker push composer/composer:1
-        docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 1.10.[\d]+' Dockerfile | grep -oE '1.10.[\d]+')
+        docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')
     - name: Login to Amazon Public ECR
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
@@ -50,6 +50,6 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         docker tag composer/composer:1 $ECR_REPO:1
-        docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.10.[\d]+' Dockerfile | grep -oE '1.10.[\d]+') $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 1.10.[\d]+' Dockerfile | grep -oE '1.10.[\d]+')
+        docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')
         docker push $ECR_REPO:1
-        docker push $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 1.10.[\d]+' Dockerfile | grep -oE '1.10.[\d]+')
+        docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')
