--- a/.github/workflows/v2.yaml
+++ b/.github/workflows/v2.yaml
@@ -28,7 +28,7 @@ jobs:
         --no-cache \
         --tag composer/composer:latest \
         --tag composer/composer:2 \
-        --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.2.[\d]+' Dockerfile | grep -oE '2.2.[\d]+') \
+        --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+') \
         .
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/main'
@@ -41,7 +41,7 @@ jobs:
       run: |
         docker push composer/composer:latest
         docker push composer/composer:2
-        docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 2.2.[\d]+' Dockerfile | grep -oE '2.2.[\d]+')
+        docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
     - name: Login to Amazon Public ECR
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
@@ -54,10 +54,10 @@ jobs:
       run: |
         docker tag composer/composer:latest $ECR_REPO:latest
         docker tag composer/composer:2 $ECR_REPO:2
-        docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.2.[\d]+' Dockerfile | grep -oE '2.2.[\d]+') $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 2.2.[\d]+' Dockerfile | grep -oE '2.2.[\d]+')
+        docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
         docker push $ECR_REPO:latest
         docker push $ECR_REPO:2
-        docker push $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 2.2.[\d]+' Dockerfile | grep -oE '2.2.[\d]+')
+        docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
   build23:
     name: Build v2.3 RC
     runs-on: ubuntu-latest
@@ -74,7 +74,7 @@ jobs:
         --no-cache \
         --tag composer/composer:latest \
         --tag composer/composer:2 \
-        --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.3.[\d]+(-RC[\d])?' Dockerfile | grep -oE '2.3.[\d]+(-RC[\d])?') \
+        --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+(-RC\d)?' Dockerfile | grep -oP '2.3.\d+(-RC\d)?') \
         .
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/main'
@@ -87,7 +87,7 @@ jobs:
       run: |
         docker push composer/composer:latest
         docker push composer/composer:2
-        docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 2.3.[\d]+(-RC[\d])?' Dockerfile | grep -oE '2.3.[\d]+(-RC[\d])?')
+        docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+(-RC\d)?' Dockerfile | grep -oP '2.3.\d+(-RC\d)?')
     - name: Login to Amazon Public ECR
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
@@ -100,7 +100,7 @@ jobs:
       run: |
         docker tag composer/composer:latest $ECR_REPO:latest
         docker tag composer/composer:2 $ECR_REPO:2
-        docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.3.[\d]+(-RC[\d])?' Dockerfile | grep -oE '2.3.[\d]+(-RC[\d])?') $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 2.3.[\d]+(-RC[\d])?' Dockerfile | grep -oE '2.3.[\d]+(-RC[\d])?')
+        docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+(-RC\d)?' Dockerfile | grep -oP '2.3.\d+(-RC\d)?') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.3.\d+(-RC\d)?' Dockerfile | grep -oP '2.3.\d+(-RC\d)?')
         docker push $ECR_REPO:latest
         docker push $ECR_REPO:2
-        docker push $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 2.3.[\d]+(-RC[\d])?' Dockerfile | grep -oE '2.3.[\d]+(-RC[\d])?')
+        docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.3.\d+(-RC\d)?' Dockerfile | grep -oP '2.3.\d+(-RC\d)?')
