--- a/.github/workflows/v2.yaml
+++ b/.github/workflows/v2.yaml
@@ -6,6 +6,7 @@ on:
     - .github/workflows/v2.yaml
     - '2.2/**'
     - '2.3/**'
+    - '2.4/**'
 
 env:
   AWS_REGION: us-east-1
@@ -59,7 +60,7 @@ jobs:
         docker push $ECR_REPO:2
         docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
   build23:
-    name: Build v2.3 RC
+    name: Build v2.3
     runs-on: ubuntu-latest
     timeout-minutes: 20
     defaults:
@@ -104,3 +105,49 @@ jobs:
         docker push $ECR_REPO:latest
         docker push $ECR_REPO:2
         docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.3.\d+(-RC\d)?' Dockerfile | grep -oP '2.3.\d+(-RC\d)?')
+  build24:
+    name: Build v2.4
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    defaults:
+      run:
+        working-directory: '2.4'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: |
+          docker build \
+          --pull \
+          --no-cache \
+          --tag composer/composer:latest \
+          --tag composer/composer:2 \
+          --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+(-RC\d)?' Dockerfile | grep -oP '2.4.\d+(-RC\d)?') \
+          .
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Push tag(s) to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker push composer/composer:latest
+          docker push composer/composer:2
+          docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+(-RC\d)?' Dockerfile | grep -oP '2.4.\d+(-RC\d)?')
+      - name: Login to Amazon Public ECR
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v1
+        with:
+          registry: public.ecr.aws
+          username: ${{ secrets.AWS_ECR_ACCESS_KEY }}
+          password: ${{ secrets.AWS_ECR_SECRET_KEY }}
+      - name: Push tag(s) to Amazon Public ECR
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker tag composer/composer:latest $ECR_REPO:latest
+          docker tag composer/composer:2 $ECR_REPO:2
+          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+(-RC\d)?' Dockerfile | grep -oP '2.4.\d+(-RC\d)?') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.4.\d+(-RC\d)?' Dockerfile | grep -oP '2.4.\d+(-RC\d)?')
+          docker push $ECR_REPO:latest
+          docker push $ECR_REPO:2
+          docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.4.\d+(-RC\d)?' Dockerfile | grep -oP '2.4.\d+(-RC\d)?')
